--- a/src/styles/_aboutme.scss
+++ b/src/styles/_aboutme.scss
@@ -7,7 +7,7 @@
         font-size: 20px;
         font-family: 'Orbitron', sans-serif;
         animation: glow 0.5s ;
-        text-shadow: 2px 2px 4px #d1e9b7;
+        // text-shadow: 1px 1px 12px #d1e9b7;
         // width:500px;
         // min-height: 150px;
     }
