--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,9 +1,8 @@
 .navbar{
     position: fixed;
     z-index: 10;
-    font-family: 'Alfa Slab One', cursive;
-    font-family: 'Anton', sans-serif;
-    background-color: transparent;
+    font-family: 'Bebas Neue', cursive;
+    background-color: rgba(0, 0, 0, 0.5);
     width:30%;
     min-height: 100vh;
     // position: absolute ;
@@ -13,25 +12,32 @@
     flex-direction: column;
     justify-content: center;
     transition: all 0.8s ease;
+    text-decoration: none;
+    padding-right: 40px;
 
     h1{
         align-items: right;
         width: 100%;
-        font-size: 60px;
+        font-size: 50px;
         text-align: right;
         // padding-right: 3px;
         transition: all 0.3s ease;
-        transform: rotate(10deg);
+        // transform: rotate(10deg);
         color:rgb(66, 223, 5);
+        // text-decoration: none !important;
         text-decoration: none;
     }
+    a:link{
+        text-decoration: none!important;
+      }
+      
 
     h1:hover{
         color:rgb(0, 0, 0);
         // border: 1px solid black;
         text-shadow: 3px 3px rgb(66, 223, 5);
         transform: rotate(0deg);
-        font-size: 80px;
+        font-size: 60px;
         cursor: pointer;
         text-decoration: none;
     }
